[project]
name = "ecommerce_karban"
authors = [
    { name = "8848", email = "gopal@8848digital.com"}
]
description = "customizations of unicommerce"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    # "frappe~=15.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ecommerce_karban"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191"
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
